--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <h1>Reza Golkhandani</h1>
         <h2>Backend Developer | Full Stack Developer</h2>
-        <p>Node.js | C# | PHP | WPF | React | Flutter </p>
+        <p>Node.js | C# | PHP | React | WPF | Flutter </p>
         <img src="/assets/image.jpg" alt="Reza Golkhandani">
         <a class="btn-download" id="cvDownload" href="/assets/Reza Golkhandani - June-05-2025 - b1.pdf" download>📄
             Download CV</a>
@@ -51,10 +51,16 @@
             <h2 class="section-heading">Technical Skills</h2>
             <div class="skills">
                 <span>JavaScript</span><span>TypeScript</span><span>Node.js</span><span>React</span><span>Angular</span><span>Flutter</span><span>C#</span>
-                <span>PHP</span><span>PostgreSQL</span><span>MongoDB</span><span>AWS (EC2, S3,
+
+                <span>PHP</span>
+                <hr>
+                <span>PostgreSQL</span><span>MongoDB</span><span>AWS (EC2, S3,
                     RDS)</span><span>Docker</span><span>Kubernetes</span>
+                <hr>
                 <span>Elasticsearch</span><span>RabbitMQ</span><span>Kafka</span><span>SQS</span><span>Kinesis</span>
+                <hr>
                 <span>GraphQL</span><span>Serverless</span><span>OpenTelemetry</span><span>CI/CD</span>
+                <hr>
                 <span>Automated Testing</span><span>API Design</span><span>Agile Development</span>
             </div>
         </section>
@@ -201,6 +207,25 @@
                                 class="glow-link" href="https://nodejs.org/" target="_blank">Node.js</a>).</li>
                     </ul>
                 </div>
+
+                <div class="job-entry">
+                    <div class="job-title">Senior Backend Developer</div>
+                    <div class="job-meta">
+                        <div class="company-label"><strong>Company:</strong> Fabizi (Tehran,
+                            Iran, On-Site)</div>
+                        <span class="job-date">Mar 2020 – Sep 2021</span>
+                    </div>
+                    <hr>
+                </div>
+
+                <div class="job-entry">
+                    <div class="job-title">Backend Developer</div>
+                    <div class="job-meta">
+                        <div class="company-label"><strong>Company:</strong> Peeyade (Tehran,
+                            Iran, On-Site)</div>
+                        <span class="job-date">Nov 2016 – Mar 2020</span>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -225,7 +250,6 @@
                 <li><strong>MSc Instructional Technologies</strong> — New York Institute of Technology, Vancouver, BC,
                     Canada</li>
                 <li><strong>BSc Electrical Engineering</strong> — University of Semnan, Iran</li>
-            </ul>
         </section>
     </div>
 
